tests/rosetta/out/C/cartesian-product-of-two-or-more-lists-3.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:59Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:59Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_list_int concat_list_list_int(list_list_int a, list_list_int b) {
  list_list_int r = list_list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static list_int slice_list_int(list_int v, int start, int end) {
  if (start < 0)
    start += v.len;
  if (end < 0)
    end += v.len;
  if (start < 0)
    start = 0;
  if (end > v.len)
    end = v.len;
  if (start > end)
    start = end;
  list_int r = list_int_create(end - start);
  for (int i = 0; i < r.len; i++)
    r.data[i] = v.data[start + i];
  return r;
}
const char *listStr(list_int xs) {
  const char *s = "[";
  int i = 0;
  while (i < xs.len) {
    char *tmp1 = _str(xs.data[i]);
    char *tmp2 = concat_string(s, tmp1);
    s = tmp2;
    if (i < xs.len - 1) {
      char *tmp3 = concat_string(s, " ");
      s = tmp3;
    }
    i = i + 1;
  }
  char *tmp4 = concat_string(s, "]");
  s = tmp4;
  return s;
}

const char *llStr(list_list_int lst) {
  const char *s = "[";
  int i = 0;
  while (i < lst.len) {
    s = s + listStr(lst.data[i]);
    if (i < lst.len - 1) {
      char *tmp5 = concat_string(s, " ");
      s = tmp5;
    }
    i = i + 1;
  }
  char *tmp6 = concat_string(s, "]");
  s = tmp6;
  return s;
}

list_int concat(list_int a, list_int b) {
  list_int out = list_int_create(0);
  for (int tmp7 = 0; tmp7 < a.len; tmp7++) {
    int v = a.data[tmp7];
    out = 0;
  }
  for (int tmp8 = 0; tmp8 < b.len; tmp8++) {
    int v = b.data[tmp8];
    out = 0;
  }
  return out;
}

list_list_int cartN(int lists) {
  if ((lists == 0)) {
    list_int tmp9 = list_int_create(0);
    return tmp9;
  }
  list_list_int a = (list_list_int)(lists);
  if (a.len == 0) {
    list_int tmp11 = list_int_create(0);
    list_int tmp10_data[] = {{0, tmp11}};
    list_list_int tmp10 = {1, tmp10_data};
    return tmp10;
  }
  list_list_int tmp12 = {0, NULL};
  list_list_int out = tmp12;
  list_int tmp13 = slice_list_int(a, 1, a.len);
  list_list_int rest = cartN(tmp13);
  for (int tmp14 = 0; tmp14 < a.data[0].len; tmp14++) {
    int x = a.data[0].data[tmp14];
    for (int tmp15 = 0; tmp15 < rest.len; tmp15++) {
      list_int p = rest.data[tmp15];
      list_int tmp16 = list_int_create(1);
      tmp16.data[0] = x;
      list_list_int tmp17 = list_list_int_create(1);
      tmp17.data[0] = concat(tmp16, p);
      list_list_int tmp18 = concat_list_list_int(out, tmp17);
      out = tmp18;
    }
  }
  return out;
}

int main() {
  list_int tmp20 = list_int_create(2);
  tmp20.data[0] = 1;
  tmp20.data[1] = 2;
  list_int tmp21 = list_int_create(2);
  tmp21.data[0] = 3;
  tmp21.data[1] = 4;
  list_int tmp19_data[] = {{2, tmp20}, {2, tmp21}};
  list_list_int tmp19 = {2, tmp19_data};
  printf("%s\n", llStr(cartN(tmp19)));
  list_int tmp23 = list_int_create(2);
  tmp23.data[0] = 3;
  tmp23.data[1] = 4;
  list_int tmp24 = list_int_create(2);
  tmp24.data[0] = 1;
  tmp24.data[1] = 2;
  list_int tmp22_data[] = {{2, tmp23}, {2, tmp24}};
  list_list_int tmp22 = {2, tmp22_data};
  printf("%s\n", llStr(cartN(tmp22)));
  list_int tmp26 = list_int_create(2);
  tmp26.data[0] = 1;
  tmp26.data[1] = 2;
  list_int tmp27 = list_int_create(0);
  list_int tmp25_data[] = {{2, tmp26}, {0, tmp27}};
  list_list_int tmp25 = {2, tmp25_data};
  printf("%s\n", llStr(cartN(tmp25)));
  list_int tmp29 = list_int_create(0);
  list_int tmp30 = list_int_create(2);
  tmp30.data[0] = 1;
  tmp30.data[1] = 2;
  list_int tmp28_data[] = {{0, tmp29}, {2, tmp30}};
  list_list_int tmp28 = {2, tmp28_data};
  printf("%s\n", llStr(cartN(tmp28)));
  printf("\n");
  printf("[\n");
  list_int tmp32 = list_int_create(2);
  tmp32.data[0] = 1776;
  tmp32.data[1] = 1789;
  list_int tmp33 = list_int_create(2);
  tmp33.data[0] = 7;
  tmp33.data[1] = 12;
  list_int tmp34 = list_int_create(3);
  tmp34.data[0] = 4;
  tmp34.data[1] = 14;
  tmp34.data[2] = 23;
  list_int tmp35 = list_int_create(2);
  tmp35.data[0] = 0;
  tmp35.data[1] = 1;
  list_int tmp31_data[] = {{2, tmp32}, {2, tmp33}, {3, tmp34}, {2, tmp35}};
  list_list_int tmp31 = {4, tmp31_data};
  for (int tmp36 = 0; tmp36 < cartN(tmp31).len; tmp36++) {
    list_int p = cartN(tmp31).data[tmp36];
    printf("%s\n", " " + listStr(p));
  }
  printf("]\n");
  list_int tmp38 = list_int_create(3);
  tmp38.data[0] = 1;
  tmp38.data[1] = 2;
  tmp38.data[2] = 3;
  list_int tmp39 = list_int_create(1);
  tmp39.data[0] = 30;
  list_int tmp40 = list_int_create(2);
  tmp40.data[0] = 500;
  tmp40.data[1] = 100;
  list_int tmp37_data[] = {{3, tmp38}, {1, tmp39}, {2, tmp40}};
  list_list_int tmp37 = {3, tmp37_data};
  printf("%s\n", llStr(cartN(tmp37)));
  list_int tmp42 = list_int_create(3);
  tmp42.data[0] = 1;
  tmp42.data[1] = 2;
  tmp42.data[2] = 3;
  list_int tmp43 = list_int_create(0);
  list_int tmp44 = list_int_create(2);
  tmp44.data[0] = 500;
  tmp44.data[1] = 100;
  list_int tmp41_data[] = {{3, tmp42}, {0, tmp43}, {2, tmp44}};
  list_list_int tmp41 = {3, tmp41_data};
  printf("%s\n", llStr(cartN(tmp41)));
  printf("\n");
  printf("%s\n", llStr(cartN(0)));
  list_int tmp45 = list_int_create(0);
  printf("%s\n", llStr(cartN(tmp45)));
}

int main() {
  main();
  return 0;
}
